Footer name changed

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       </section>
       <!-- footer -->
       <footer>
-        <p>All rights Reserved &copy; My Portfolio &reg; Ana Steel</p>
+        <p>All rights Reserved &copy; My Portfolio &reg; Elena Richard</p>
         <div class="up-arrow">
             <a href="#layout"><i class="fa-solid fa-arrow-up fa-2x"></i></a>
         </div>
